# djangocms-git-md-page

./: .bumpversion.cfg  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  test.md  tox.ini
git_md_page/: __init__.py  cms_plugins.py  urls.py  views.py
git_md_page/admin/: __init__.py  git_plugin.py
git_md_page/forms/: __init__.py  git_plugins.py
git_md_page/locale/cs/LC_MESSAGES/: django.po
git_md_page/migrations/: 0001_initial.py  0002_gitrepository_branch.py  0003_alter_gitrepository_id_alter_gitrepository_secret_and_more.py  0003_unique_url.py
git_md_page/models/: __init__.py  git_plugins.py
git_md_page/signals/: __init__.py  git_update.py
git_md_page/templates/git_md_page/: git_text.html
git_md_page/tests/: __init__.py  settings.py  test_forms.py  test_models.py  test_signals.py  test_views.py
test_cfg/: settings.py
