[metadata]
name = djangocms-git-md-page
version = attr: git_md_page.__version__
author = CZ.NIC, z.s.p.o.
author-email = kontakt@nic.cz
requires-dist = setuptools

[options]
include_package_data = True
packages = find:
install_requires =
    Django < 3.0
    django-cms
    gitpython
    markdown

[options.extras_require]
quality =
    black
    flake8
    isort
    mypy
    pydocstyle

[isort]
line_length = 120
known_first_party = git_md_page
default_section = THIRDPARTY

[flake8]
max-line-length = 120
max-complexity = 15
exclude = migrations

[pydocstyle]
add_ignore = D413,D1
match_dir = ^(?!migrations|\.).*

[mypy]
ignore_missing_imports = True
check_untyped_defs = True

[mypy-git_md_page.migrations.*]
ignore_errors = True
