[metadata]
name = djangocms-git-md-page
version = attr: git_md_page.__version__
author = CZ.NIC, z.s.p.o.
author-email = kontakt@nic.cz
requires-dist = setuptools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CZ-NIC/djangocms-git-md-page
classifiers =
    Framework :: Django CMS :: 4.1
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
include_package_data = True
packages = find:
install_requires =
    django-cms>=3.11
    gitpython~=3.1
    markdown~=3.5

[options.extras_require]
quality =
    black
    flake8
    isort
    mypy
    polint
    pydocstyle

[isort]
line_length = 120
known_first_party = git_md_page
default_section = THIRDPARTY
skip_glob = git_md_page/migrations/*

[flake8]
max-line-length = 120
max-complexity = 15
exclude = migrations

[pydocstyle]
add_ignore = D413,D1
match_dir = ^(?!migrations|\.).*

[mypy]
ignore_missing_imports = True
check_untyped_defs = True

[mypy-git_md_page.migrations.*]
ignore_errors = True

[compile_catalog]
domain = django
directory = git_md_page/locale
